tests/snapshots/regression/recovery__t16_module_missing_lbrace_contextual.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
exit_code: 1

[1 of 8] Compiling  Assert
[2 of 8] Compiling  Array
[3 of 8] Compiling  IO
[4 of 8] Compiling  List
[5 of 8] Compiling  Numeric
[6 of 8] Compiling  Option
[7 of 8] Compiling  String
• 1 error • tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx
error[E034]: Missing Module Body

This module body needs to start with `{`.

  tests/fixtures/recovery/t16_module_missing_lbrace_contextual.flx:2:1
  |
2 | let after = 1
  | ^^^

Hint:
  Module declarations use `module Name { ... }`.

Note:
  while parsing module `Demo`
